# qualia-plugin-snn

./: .editorconfig  .gitignore  .gitlab-ci.yml  README.md  pyproject.toml
.github/workflows/: doc.yml
conf/cifar10/: SResNet18_int8_train.toml  SResNetv1_float32_train.toml  SVGG_float32_train.toml  cifar10_QSVGG11_student_10_with_decoupled_potential_v.toml  vgg16_bn_ifsr_float32_energyestimationmetric.toml  vgg16_bn_ifsr_float32_train.toml  vgg16_bn_ifsr_int8_train.toml
conf/cifar10_ICONIP/: cifar10_SVGG_SCNN_float32_train.toml
conf/dvsgesture/: CNN_float32_Linux.toml  SCNN_float32_Linux.toml  SCNN_int16_Linux.toml
conf/eurosat/: config_snn_eurosat_ht1_8bit.toml  config_snn_eurosat_ht1_float.toml  config_snn_eurosat_ht2_8bit.toml  config_snn_eurosat_ht2_float.toml  config_snn_eurosat_ht4_8bit.toml  config_snn_eurosat_ht4_float.toml  config_snn_eurosat_st2_8bit.toml  config_snn_eurosat_st2_float.toml  config_snn_eurosat_st4_8bit.toml  config_snn_eurosat_st4_float.toml
conf/gsc_ICONIP/: GSC_ResNetv1-8_ICONIP_livemfcc_full_STEST.toml  GSC_SResNetv1-8_ICONIP_livemfcc_float32_train.toml  GSC_SResNetv1-8_fused_ICONIP_livemfcc_LSQ4_and_8_train.toml  GSC_SResNetv1-8_fused_ICONIP_livemfcc_PTQ16_and_8_train.toml  GSC_SResNetv1-8_fused_ICONIP_livemfcc_QAT4_and_8_train.toml  GSC_SResNetv1-8_fused_ICONIP_livemfcc_TEST.toml  GSC_SResNetv1-8_no_fused_ICONIP_livemfcc_LSQ4_and_8_train.toml  GSC_SResNetv1-8_no_fused_ICONIP_livemfcc_QAT4_and_8_train.toml
conf/nrj_estimation_comp/: GSC_ResNetv8_0_4_8_16_32_float.toml  GSC_SResNetv8_0_4_8_16_32_float.toml  cifar10_SVGG16_0_32KB_only_4_8_16_32.toml  cifar10_SVGG16_0_4_8_16_32_float.toml  cifar10_VGG16_0_32KB_only_4_8_16_32_float.toml  cifar10_VGG16_0_4_8_16_32_float.toml
conf/shd/: SCNN_float32_Linux.toml
docs/: conf.py  index.rst
src/qualia_plugin_snn/: __init__.py
src/qualia_plugin_snn/dataaugmentation/pytorch/: DataAugmentationPyTorchTimeStepsInData.py  __init__.py
src/qualia_plugin_snn/datamodel/: EventDataModel.py  __init__.py
src/qualia_plugin_snn/dataset/: DVSGesture.py  DVSGestureWithPreprocessing.py  EventDataset.py  SHD.py  SSC.py  __init__.py
src/qualia_plugin_snn/deployment/: __init__.py
src/qualia_plugin_snn/deployment/qualia_codegen/: Linux.py  Windows.py  (+2 more)
src/qualia_plugin_snn/experimenttracking/: QualiaDatabase.py  __init__.py
src/qualia_plugin_snn/learningframework/: SpikingJelly.py  SpikingJellyMultiStep.py  SpikingJellyMultiStepTimeStepsInData.py  SpikingJellyTimeStepsInData.py  __init__.py
src/qualia_plugin_snn/learningmodel/: __init__.py
src/qualia_plugin_snn/postprocessing/: EnergyEstimationMetric.py  FuseBatchNorm.py  OperationCounter.py  QualiaCodeGen.py  __init__.py  patch
src/qualia_plugin_snn/preprocessing/: Group2TimeStepsBySample.py  IntegrateEventsByFixedDuration.py  IntegrateEventsByFixedFramesNumber.py  Split2TimeSteps.py  __init__.py
(+26 files in other folders)
